@@ -1,6 +1,11 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \(hy History For AdvanceCOMP
+.SH ADVANCECOMP VERSION 1.18 2013/04 
+.PD 0
+.IP \(bu
+Fixed build with BZIP.
+.PD
 .SH ADVANCECOMP VERSION 1.17 2013/03 
 .PD 0
 .IP \(bu
