@@ -5,6 +5,14 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
+AdvanceCOMP Version 1.18 2013/04
+</h2>
+<ul>
+<li>
+Fixed build with BZIP.
+</li>
+</ul>
+<h2> 
 AdvanceCOMP Version 1.17 2013/03
 </h2>
 <ul>
