@@ -3,6 +3,12 @@
                             =======================
 
 
+ADVANCECOMP VERSION 1.18 2013/04
+================================
+
+* Fixed build with BZIP.
+
+
 ADVANCECOMP VERSION 1.17 2013/03
 ================================
 
